fix image with border too large.

--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
 .ingredients-selected {
     border: 0.4rem red dotted;
 }
+
+.responsive-img {
+    max-height: 153px;
+}
